hphp/hack/test/typecheck/extends_multiple1.php.exp
File "extends_multiple1.php", line 12, characters 11-13:
This object is of type IAB (Typing[4110])
File "extends_multiple1.php", line 12, characters 29-29:
It is incompatible with this object of type I
because some declarations are incompatible.
Read the following to see why:
File "extends_multiple1.php", line 12, characters 31-31:
This is an object of type A
File "extends_multiple1.php", line 4, characters 26-26:
  via this generic T
File "extends_multiple1.php", line 12, characters 25-25:
It is incompatible with an object of type B
File "extends_multiple1.php", line 4, characters 26-26:
  via this generic T
